--- a/public/index.html
+++ b/public/index.html
@@ -7,23 +7,29 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+  <!-- Top Bar -->
+<div class="top-bar">
+  <div class="logo-wrap">
+    <img src="/assets/tapp-logo.png" class="tapp-logo">
+    <span class="byline">by Erika Owls</span>
+  </div>
+</div>
+
   <div class="chat-container" id="chatContainer">
     <div class="chat-message erika">
       <img src="/assets/erika-avatar.png" class="avatar">
       <div class="chat-bubble">Welcome lovely! Ready to begin your reading?</div>
     </div>
     <div class="chat-action">
-      <button id="startReadingBtn">Generate Reading</button>
+      <button class="chat-btn" id="startReadingBtn">Generate Reading</button>
     </div>
   </div>
 
-  <div class="chat-input-container hidden" id="inputContainer">
+  <div class="chat-input-container" id="inputContainer">
     <input type="text" id="question" placeholder="Type your question...">
-    <button id="shuffleBtn" class="hidden">Shuffle Cards</button>
-    <button id="getReadingBtn" class="hidden">Get Reading</button>
+    <button id="sendQuestionBtn" disabled>Send</button>
   </div>
 
   <script src="/script.js" defer></script>
 </body>
 </html>
-
