--- a/public/welcome.html
+++ b/public/welcome.html
@@ -10,6 +10,17 @@
 </head>
 <body>
 
+
+<div class="card-animation">
+  <div class="card-layer">
+    <img src="/assets/cards/six-of-pentacles/card-outline.png" class="card-outline">
+    <img src="/assets/cards/six-of-pentacles/stars.png" class="stars">
+    <img src="/assets/cards/six-of-pentacles/the-giver.png" class="giver">
+    <img src="/assets/cards/six-of-pentacles/beggar-left.png" class="beggar-left">
+    <img src="/assets/cards/six-of-pentacles/beggar-right.png" class="beggar-right">
+  </div>
+</div>
+
   <!-- 🖤 Center Overlay with Logo + Signup -->
   <div class="center-overlay">
   <div class="logo-and-signup">
@@ -21,5 +32,7 @@
     </div>
   </div>
 </div>
+
+
 </body>
 </html>
