home page graphic

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tapp - Welcome</title>
@@ -10,29 +9,30 @@
 </head>
 <body>
 
-
+<!-- 🎴 Right Side - Two Static Cards -->
 <div class="card-animation">
+  <!-- Six of Pentacles -->
   <div class="card-layer">
     <img src="/assets/cards/six-of-pentacles/card-outline.png" class="card-outline">
-    <img src="/assets/cards/six-of-pentacles/stars.png" class="stars">
     <img src="/assets/cards/six-of-pentacles/the-giver.png" class="giver">
-    <img src="/assets/cards/six-of-pentacles/beggar-left.png" class="beggar-left">
-    <img src="/assets/cards/six-of-pentacles/beggar-right.png" class="beggar-right">
+  </div>
+  
+  <!-- Lovers Card -->
+  <div class="card-layer lovers-card">
+    <img src="/assets/cards/the-lovers/card-outline-lovers.png" class="card-outline">
   </div>
 </div>
 
-  <!-- 🖤 Center Overlay with Logo + Signup -->
-  <div class="center-overlay">
+<!-- 🖤 Left Side - Tapp Logo + Signup -->
+<div class="center-overlay">
   <div class="logo-and-signup">
     <img src="/assets/tapp-logo.png" alt="Tapp Logo" class="tapp-logo">
-
     <div class="signup-container">
       <input type="email" placeholder="Enter your email" class="signup-input" />
       <button class="signup-button">Join the Beta</button>
     </div>
   </div>
 </div>
-
 
 </body>
 </html>
