Prepare for Railway Deployment

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -219,10 +219,10 @@
 <!-- 🖤 Left Side - Tapp Logo + Signup -->
 <div class="center-overlay">
   <div class="logo-and-signup">
-    <img src="/assets/tapp-logo.png" alt="Tapp Logo" class="tapp-logo">
+    <img src="/assets/tapp-logo-3.png" alt="Tapp Logo" class="tapp-logo">
     <div class="signup-container">
       <input type="email" placeholder="Enter your email" class="signup-input" />
-      <button class="signup-button">Join the Beta</button>
+      <button class="signup-button" onclick="window.location.href='video-intro.html'">Join the Beta</button>
     </div>
   </div>
 </div>
