--- a/public/question-screen.html
+++ b/public/question-screen.html
@@ -509,7 +509,7 @@
       const question = questionInput.value.trim();
       if (question.length > 0) {
         sessionStorage.setItem('userQuestion', question);
-        window.location.href = '/shuffle-cards.html';
+        window.location.href = '/spread.html';
       }
     }
     
