full UI and mobile done for v1

--- a/public/index.html
+++ b/public/index.html
@@ -206,8 +206,8 @@
 <div class="card-animation">
   <!-- Six of Pentacles -->
   <div class="card-layer">
-    <img src="/assets/cards/six-of-pentacles/card-outline.png" class="card-outline">
-    <img src="/assets/cards/six-of-pentacles/the-giver.png" class="giver">
+    <img src="/assets/faces/knight-of-swords.png" class="card-outline">
+    <img src="/assets/faces/queen-of-wands.png" class="giver">
   </div>
   
   <!-- Lovers Card -->
@@ -222,7 +222,8 @@
     <img src="/assets/tapp-logo-3.png" alt="Tapp Logo" class="tapp-logo">
     <div class="signup-container">
       <input type="email" placeholder="Enter your email" class="signup-input" />
-      <button class="signup-button" onclick="window.location.href='video-intro.html'">Join the Beta</button>
+      <button class="signup-button" onclick="window.location.href='/question-screen.html'">Join the Beta</button>
+
     </div>
   </div>
 </div>
